# 2EAI-HAC-2526-TaskHLS-bj-mk-tm

./: README.md
2D_Convolutie/: compile_commands.json  vitis-comp.json  vitis_convolution.cpp  vitis_convolution.h  vitis_convolution_tb.cpp
2D_Convolutie/2D_Convolutie/: 2D_Convolutie.hlscompile_summary  2D_Convolutie.hlsrun_cosim_summary  2D_Convolutie.hlsrun_csim_summary  2D_Convolutie.hlsrun_package_summary  vitis-comp.json
2D_Convolutie/2D_Convolutie/hls/: config.cmdline  hls_data.json
2D_Convolutie/2D_Convolutie/reports/: hls_compile.rpt  v++_compile_2D_Convolutie_guidance.html
2D_Convolutie_HLS/: compile_commands.json  convolutie_2d.cpp  convolutie_2d.h  convolutie_tb.cpp  hls_config.cfg  vitis-comp.json
2D_Convolutie_HLS/2D_Convolutie_HLS/: 2D_Convolutie_HLS.hlscompile_summary  2D_Convolutie_HLS.hlsrun_csim_summary  2D_Convolutie_HLS.hlsrun_package_summary  vitis-comp.json
2D_Convolutie_HLS/2D_Convolutie_HLS/hls/: config.cmdline  hls_data.json
2D_Convolutie_HLS/2D_Convolutie_HLS/reports/: v++_compile_2D_Convolutie_HLS_guidance.html
2D_Convolutie_VIVADO/: 2D_Convolutie_VIVADO.xpr
2D_Convolutie_VIVADO/2D_Convolutie_VIVADO.cache/wt/: synthesis.wdf  webtalk_pa.xml
2D_Convolutie_VIVADO/2D_Convolutie_VIVADO.ip_user_files/sim_scripts/design_1/activehdl/: CMakeLists.txt  compile.do  design_1.sh  simulate.do
2D_Convolutie_VIVADO/2D_Convolutie_VIVADO.runs/impl_1/: gen_run.xml  (+38 more)
Edges/: compile_commands.json  hls_config.cfg  vitis-comp.json  vitis_convolution.cpp  vitis_convolution.h  vitis_convolution_tb.cpp
Edges/Edges/: Edges.hlscompile_summary  Edges.hlsrun_cosim_summary  Edges.hlsrun_csim_summary  Edges.hlsrun_package_summary  vitis-comp.json
Edges/Edges/hls/impl/misc/drivers/vitis_convolution_v1_0/src/: CMakeLists.txt  xvitis_convolution.h
Pooling_HLS/: compile_commands.json  hls_config.cfg  pooling.cpp  pooling.h  pooling_tb.cpp  vitis-comp.json
Pooling_HLS/Pooling_HLS/: Pooling_HLS.hlscompile_summary  Pooling_HLS.hlsrun_csim_summary  Pooling_HLS.hlsrun_package_summary  vitis-comp.json
Pooling_VIVADO/: Pooling_VIVADO.xpr
Python_Codes/2D_Convolution_Project/: 2D_Convolutie.bit  2D_convolutie.ipynb  loaded.xclbin
Python_Codes/Edges/: Edges.bit  Edges.hwh  edges.ipynb  loaded.xclbin
Python_Codes/Pooling/: Pooling.ipynb  loaded.xclbin
_ide/: .peers.ini  version.ini  workspace_journal.py  workspace_journal_1584.py  workspace_journal_18176.py  workspace_journal_20724.py  workspace_journal_20980.py  workspace_journal_28432.py  workspace_journal_9892.py
_ide/.wsdata/: clang_dir_map.json  problems_data.json
gstreamer/: README.md  livestream_template.py
scripts/: build_info.sh  check_project.sh
vivado_2D_convolutie/: vivado_2D_convolutie.xpr
vivado_edges/: vivado_edges.xpr
(+2107 files in other folders)
